<resources>
    <!--    Strings sistema-->
    <string name="app_name">SuperList</string>

    <!--    Strings Login-->
    <string name="textLogin">INICIA SESIÓN</string>
    <string name="textEmail">Correo Electrónico</string>
    <string name="textPassword">Contraseña</string>
    <string name="textButtonLogIn">Iniciar sesión</string>
    <string name="textForgotPassword">¿Contraseña olvidada?</string>
    <string name="textRegister">¿Registrarse?</string>
    <string name="textToolBar">BIENVENIDO</string>
    <string name="title_activity_register">ActividadDeRegistro</string>
    <string name="prompt_email">Correo Electrónico</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar sesión o Registrarse</string>
    <string name="action_sign_in_short">Iniciar sesión</string>
    <string name="welcome">Bienvenido!</string>
    <string name="invalid_username">Usuario inválido.</string>
    <string name="invalid_password">La contraseña debe ser de > de 5 caracteres.</string>
    <string name="login_failed">Inicio de sesión fallido.</string>

    <!--    Strings register -->

    <string name="textTitleRegister">" Registrate"</string>
    <string name="textHintEmailRegister">Ejemplo@gmail.com</string>
    <string name="textHintPassword1Register">Contraseña</string>
    <string name="textHintPassword2Register">Repite contraseña</string>
    <string name="textButtonRegister">REGISTRO</string>
    <string name="contentDescriptionPassword1Icon">Contraseña1 Icono</string>
    <string name="contentDescriptionPassword2Icon">Contraseña2 Icono</string>
    <string name="contentDescriptionArrowBack">VolverAtrás Icono</string>
    <string name="contentDescriptionEmailIcon">CorreoElectronicoIcono</string>

    <!--    Strings Forgot Password-->
    <string name="textHintEmailForgotPassword">TuEmail@gmail.com</string>
    <string name="textHintEmailForgotPassword2">RepiteTuEmail@gmail.com</string>
    <string name="textButtonForgotPassword">Enviar email</string>
    <string name="textTitleForgotPassword">Escribe tu correo electrónico</string>

    <!--    Strings activity_aniadirLista-->
    <string name="textoNombreAniadirLista">Nombre: </string>
    <string name="textoHintNombreAniadirLista">Mi Lista</string>
    <string name="textoDescripcionAniadirLista">Descripción: </string>
    <string name="textoHintDescripcionAniadirLista">Lista de la compra</string>
    <string name="textoBotonAniadirLista">SIGUIENTE</string>
    <!--    <string name="textoTextViewDefaultIntroduceFecha">Pulse en el botón para introducir la fecha.</string>-->
    <string name="textoTituloAniadirLista">Crea tu lista</string>

    <!--    Menu lista -->

    <string name="textoMenuListaAbrir">Abrir</string>
    <string name="textoMenuListaBorrar">Borrar</string>
    <string name="botonVolverMainContext">botonVolverMain</string>
    <string name="tituloAñadirTareas">Añade las tareas</string>
    <string name="textoBotonAñadirTarea">AÑADIR</string>
    <string name="textoBotonFinalizarListaTareas">FINALIZAR</string>
    <string name="textoFechaLimiteAddLista">Fecha límite</string>
    <string name="HintNombreLista">Nombre de la lista</string>
    <string name="HintDescripcionLista">Descripcion de la lista</string>
    <string name="errorEleccionFecha">¡Elige la fecha!</string>
    <string name="textoCampoObligatorio">Este campo es obligatorio.</string>
    <string name="MensajeAdvertenciaVolverAtrasTareas">¿Estás seguro que quieres volver atrás? ¡Las tareas añadidas se borrarán!</string>
    <string name="AceptarVolverAtrasTareas">Aceptar</string>
    <string name="CancelarVolverAtrasTareas">Cancelar</string>
    <string name="textDialogoAñadirTarea">Introduzca los datos de la tarea.</string>
    <string name="errorUsuarioNoExiste">No existe un usuario con este email.</string>
    <string name="errorContraseñaNoValida">La contraseña es incorrecta.</string>
    <string name="errorDeFormatoDeEmail">El formato del email es erroneo. \"ejemplo@gmail.com\"</string>
    <string name="mensajeErrorContraseñasNoCoinciden">Las contraseñas no coinciden.</string>
    <string name="textoErrorUsuarioExistente">Ya hay una cuenta registrada con este email.</string>
    <string name="textNameInfo">Nombre:</string>
    <string name="textoTituloInformacionLista">Información Lista</string>
    <string name="textDescripcionInfo">Descripción:</string>
    <string name="textFechaCreacionInfo">Fecha de creación:</string>
    <string name="textFechaLimiteInfo">Fecha límite:</string>
    <string name="textTipoListaInfo">Tipo de lista:</string>
    <string name="textNumeroTareasInfo">Número de tareas:</string>
    <string name="textDesplegableBotonInfo">Información</string>
    <string name="title_activity_main">Actividad principal</string>
    <string name="navigation_drawer_open">Abre el navigation drawer</string>
    <string name="navigation_drawer_close">Cerrar navigation drawer</string>
    <string name="nav_header_title">Aqui irá el nombre de usuario, cambiar. Strings</string>
    <string name="nav_header_subtitle">Aquí irá el email, cambiar. Strings</string>
    <string name="nav_header_desc">Cabecera de la navegación</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_Listas">Mis Listas</string>
    <string name="menu_cerrarSesion">Cerrar sesión</string>
    <string name="mensajeLoginExitosoToast">Inicio de sesión correcta.</string>
    <string name="mensajeLoginFallidoToast">Los credenciales pasados no son válidos.</string>
    <string name="mensajeLogoutExitoso">Ha cerrado sesión correctamente.</string>
    <string name="mensajeTareaAñadidaExito">Tarea añadida correctamente.</string>
    <string name="mensajeTareaAñadidaError">Introduzca el texto de la tarea.</string>
    <string name="textoDegradarUsuario">¿Estás seguro de que quieres degradar a este usuario?</string>
    <string name="textoHacerAdminUsuario">¿Estás seguro de que quieres hacer administrador a este usuario?</string>
    <string name="textoTituloAlertasAdministrarUsuarios">Confirmación</string>
    <string name="textoDesbanearUsuario">¿Estás seguro de que quieres desbanear a este usuario?</string>
    <string name="textoBanearUsuario">¿Estás seguro de que quieres banear a este usuario?</string>
    <string name="textoPopupDegradarUsuario">Degradar usuario</string>
    <string name="textoPopupHacerAdminUsuario">Hacer administrador</string>
    <string name="textoPopupDesbanearUsuario">Levantar prohibición</string>
    <string name="textoPopupBanearUsuario">Prohibir al usuario</string>
    <string name="textoListaCompra">Lista de la compra</string>
    <string name="textoListaDeseos">Lista de deseos</string>
    <string name="textoListaTareas">Lista de tareas</string>
    <string name="textoReceta">Receta</string>
    <string name="textoOtraLista">Otro</string>
    <string name="textoNoHayUsuarios">Eres el único usuario.</string>
    <string name="textoPrioridadAlta">Alta</string>
    <string name="textoPrioridadMedia">Media</string>
    <string name="textoPrioridadBaja">Baja</string>
    <string name="textoDrawerAdminUsuarios">Administrar usuarios</string>
    <string name="textoGraficoListas">Gráfico de listas</string>
    <string name="enviarCorreoRecuperacionTexto">Enviar correo recuperar contraseña</string>
    <string name="textoTarea">Tarea</string>
    <string name="textoAñadirTareaBoton">AGREGAR</string>
    <string name="textoRecuperarContraseñaEnvioCorrecto">El correo electrónico se envió correctamente.</string>
    <string name="textoRecuperarContraseñaEnvioIncorrecto">Hubo un error enviando el correo electrónico.</string>
    <string name="textoAutenticacionFallida">Fallo al autenticarse.</string>
    <string name="textoHaSidoBaneado">Has sido baneado, no puedes iniciar sesión.</string>
    <string name="textoSeRegistroCorrectamente">Se registró correctamente.</string>
    <string name="textoErrorCargandoDatos">Error al cargar los datos.</string>


</resources>