<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@color/black"
                                                   android:contentDescription="@string/contentDescriptionPassword1Icon"
                                                   tools:context=".RegisterActivity">

    <TextView
            android:id="@+id/textRegister"
            android:layout_width="332dp"
            android:layout_height="70dp"
            android:layout_marginTop="124dp"
            android:background="@color/black"
            android:backgroundTint="@color/white"
            android:backgroundTintMode="multiply"
            android:gravity="center"
            android:text="@string/textTitleRegister"
            android:textColor="@color/white"
            android:textColorHighlight="@color/design_default_color_primary"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/RegisterInputEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="TextSizeCheck"/>

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarRegister"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:background="@color/whiteBasic"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <ImageButton
            android:id="@+id/imgButtonGoBackRegister"
            android:layout_width="65dp"
            android:layout_height="71dp"
            android:contentDescription="@string/contentDescriptionArrowBack"
            android:scrollbarSize="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.046"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_revert"
            app:tint="@color/black"
            tools:ignore="SpeakableTextPresentCheck"/>

    <Button
            android:id="@+id/buttonRegister"
            android:layout_width="154dp"
            android:layout_height="66dp"
            android:layout_marginBottom="76dp"
            android:backgroundTint="@color/black"
            android:gravity="center"
            android:text="@string/textButtonRegister"
            android:textColor="@color/whiteBasic"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textPassword2"
            app:layout_constraintVertical_bias="0.916"
            app:strokeColor="@color/white"
            app:strokeWidth="2dp"/>

    <EditText
            android:id="@+id/textPassword2"
            android:layout_width="246dp"
            android:layout_height="59dp"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/textHintPassword2Register"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:textColorHint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.63"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textPassword1"
            app:layout_constraintVertical_bias="0.0"/>

    <EditText
            android:id="@+id/RegisterInputEmail"
            android:layout_width="250dp"
            android:layout_height="63dp"
            android:layout_marginTop="144dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/textHintEmailRegister"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/whiteBasic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.645"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbarRegister"/>

    <ImageView
            android:id="@+id/imageEmailRegister"
            android:layout_width="60dp"
            android:layout_height="54dp"
            android:contentDescription="@string/contentDescriptionEmailIcon"
            app:srcCompat="@drawable/iconemail"
            app:layout_constraintEnd_toStartOf="@+id/RegisterInputEmail"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/toolbarRegister"
            android:layout_marginTop="152dp"/>
    <EditText
            android:id="@+id/textPassword1"
            android:layout_width="246dp"
            android:layout_height="59dp"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:autofillHints="password"
            android:hint="@string/textHintPassword1Register"
            android:inputType="textPassword"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.63"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/RegisterInputEmail"/>

    <ImageView
            android:id="@+id/imagePassword1"
            android:layout_width="59dp"
            android:layout_height="59dp"
            android:contentDescription="@string/contentDescriptionPassword1Icon"
            app:srcCompat="@drawable/iconfirstpassword"
            app:layout_constraintEnd_toStartOf="@+id/textPassword1"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintTop_toBottomOf="@+id/imageEmailRegister" android:layout_marginTop="40dp"/>
    <ImageView
            android:id="@+id/imagePassword2"
            android:layout_width="73dp"
            android:layout_height="63dp"
            android:contentDescription="@string/contentDescriptionPassword2Icon"
            app:srcCompat="@drawable/iconsecondpassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textPassword2" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.29" android:layout_marginBottom="252dp"
            app:layout_constraintTop_toBottomOf="@+id/imagePassword1" app:layout_constraintVertical_bias="0.682"/>

</androidx.constraintlayout.widget.ConstraintLayout>