<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <Button
        android:id="@+id/buttonForgotPassword"
        android:layout_width="154dp"
        android:layout_height="66dp"
        android:layout_marginBottom="68dp"
        android:backgroundTint="@color/black"
        android:gravity="center"
        android:text="@string/textButtonForgotPassword"
        android:textColor="@color/whiteBasic"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp" />

    <TextView
        android:id="@+id/TitleForgotPassword"
        android:layout_width="362dp"
        android:layout_height="121dp"
        android:layout_marginTop="96dp"
        android:background="@color/black"
        android:backgroundTint="@color/white"
        android:backgroundTintMode="multiply"
        android:gravity="center"
        android:text="@string/textTitleForgotPassword"
        android:textColor="@color/white"
        android:textColorHighlight="@color/design_default_color_primary"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/imageEmailRegister3"
        android:layout_width="60dp"
        android:layout_height="54dp"
        android:layout_marginBottom="428dp"
        android:contentDescription="@string/contentDescriptionEmailIcon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/registerInputEmail2"
        app:layout_constraintHorizontal_bias="0.627"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/iconemail" />

    <EditText
        android:id="@+id/registerInputEmail3"
        android:layout_width="264dp"
        android:layout_height="72dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="296dp"
        android:autofillHints=""
        android:ems="10"
        android:foregroundTint="#FFFFFF"
        android:hint="@string/textHintEmailForgotPassword2"
        android:inputType="textEmailAddress"
        android:textColor="@color/whiteBasic"
        android:textColorHint="@color/whiteBasic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/registerInputEmail2"
        android:layout_width="264dp"
        android:layout_height="72dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="420dp"
        android:autofillHints=""
        android:ems="10"
        android:foregroundTint="#FFFFFF"
        android:hint="@string/textHintEmailForgotPassword"
        android:inputType="textEmailAddress"
        android:textColor="@color/whiteBasic"
        android:textColorHint="@color/whiteBasic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarForgotPassword"
        android:layout_width="0dp"
        android:layout_height="73dp"
        android:background="@color/whiteBasic"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imgButtonGoBackForgotPassword"
        android:layout_width="65dp"
        android:layout_height="71dp"
        android:contentDescription="@string/contentDescriptionArrowBack"
        android:scrollbarSize="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.003"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_revert"
        app:tint="@color/black"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="64dp"
        android:layout_height="54dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/registerInputEmail3"
        app:layout_constraintHorizontal_bias="0.914"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageEmailRegister3"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/iconemailagain" />

</androidx.constraintlayout.widget.ConstraintLayout>